ui/client-react/src/components/fields/fields.scss
@import '../../../src/assets/css/qbVariables';
$data-font-size: $font-size-p;

@mixin text-input-focus {
    border: solid 1px $input-text-focus-border-color;
    //Added border-color for multi choice text box
    border-color: $input-text-focus-border-color !important;

    @include focus-shadow();
}

@mixin text-input-focus-with-rounding {

    @include text-input-focus;
    border-radius: 2px;
}

// plain user data
.data {
    color: $data-color;
    font-family: $font-family;
    font-size: $data-font-size;
    -webkit-font-smoothing: antialiased;
}

// inline edit of a cell
.cellEdit {
    border: solid 1px $input-text-normal-border-color;
    box-shadow: none;
    border-radius: 2px;
}

// visual style of input userdata

@mixin error-border() {
    border: 1px solid $input-text-error-border-color;
    border-left-width: 5px;
    box-shadow: none;
}

[type="text"],
[type="url"],
[type="email"],
[type="tel"] {
    &.input {
        background-color: $input-bg-color;
    }

    // layout of input userdata in an inline edit table
    .reportTable &.input {
        margin: 0 1px;
        padding: 0 0 0 2px;
        width: inherit;
        height: 30px;
        &.rightAlignInlineEditNumberFields {
            text-align: right;
            padding-right: 2px;
        }
    }

    &:focus.input {

        @include text-input-focus;
    }

    // visual style of input error
    .textField.error &.input, &.input.error, .error .borderOnError, .error .error.borderOnError {
        border-top: 1px solid $input-text-error-border-color;
        border-right: 1px solid $input-text-error-border-color;
        border-bottom: 1px solid $input-text-error-border-color;
        border-left: 5px solid $input-text-error-border-color;
        border-color: $input-text-error-border-color !important;
        box-shadow: none;
    }

    // visual style of focus input error
    .textField.error &:focus.input, &:focus.input.error, .error :focus.borderOnError, .error &:focus.error.borderOnError {
        outline: none;

        @include error-border;
        @include focus-shadow($input-text-error-border-color);
    }
}

textarea:focus, .is-focused:not(.is-open) > .Select-control {

    @include text-input-focus;
}

.error .borderOnError {
    border-top: 1px solid $input-text-error-border-color;
    border-right: 1px solid $input-text-error-border-color;
    border-bottom: 1px solid $input-text-error-border-color;
    border-left: 5px solid $input-text-error-border-color;
    border-color: $input-text-error-border-color !important;
    box-shadow: none;
}

.error :focus.borderOnError {
    outline: none;
    border-top: 1px solid $input-text-error-border-color;
    border-right: 1px solid $input-text-error-border-color;
    border-bottom: 1px solid $input-text-error-border-color;
    border-left: 5px solid $input-text-error-border-color;
    border-color: $input-text-error-border-color !important;

    @include focus-shadow($input-text-error-border-color);
}

.Select {
    &.is-open .Select-control {

        @include text-input-focus;
    }
}

.invalidInput.tooltip {
    z-index: 9999;
}

.invalidRecord.tooltip > .tooltip-arrow, .invalidInput.tooltip > .tooltip-arrow {
    border-bottom-color: $tootip-error-color;
    border-top-color: $tootip-error-color;
    top: 100%;
}

.invalidRecord.tooltip, .invalidRecord.tooltip .tooltip-inner, .invalidInput.tooltip, .invalidInput.tooltip .tooltip-inner {
    background-color: $tootip-error-color;
}

.invalidRecord.tooltip .tooltip-arrow {
    top: -5px;
}

.invalidRecord.tooltip.top .tooltip-arrow {
    bottom: -5px;
    top: initial;
}

// visual style of required field indicator
.requiredFlag {
    color: $field-label-normal-color;
    font-size: 17px;
}

.requiredFlag-layout {
    display: block;
    padding-left: 2px;
}

.textFormat .cellData .textField {
    word-break: break-word;
    white-space: nowrap;
}

.textFormat .cellData.NoWrap .textField {
    white-space: nowrap;
}

.multiLineCellEditWrapper .cellEdit {
    min-height: 28px;
}

.multiLineCellEditWrapper.error .tipChildWrapper, .multiLineCellEditWrapper.error .tipChildWrapper textarea {
    height: 28px !important;
}

.userDisplayValue {
    overflow: hidden; /* stylelint-disable-line */
    text-overflow: ellipsis;
    display: inline;
}

.cellData.NoWrap {
    white-space: nowrap;
}

.tooltip {
    z-index: 1;
}

/* allow wide tooltips */
.tooltip-inner {
    max-width: none;
}

.inputDeleteIcon {
    position: relative;
    width: inherit;

    input {
        transition: padding 0.3s ease-in-out;
    }

    .clearIcon {
        display: none;
        background-color: transparent;
        color: $clearmini-normal-color;
        max-height: 16px;
        max-width: 16px;
        opacity: 0;
        position: absolute;
        right: -3px;
        top: 50%;
        transform: translateY(-50%) rotate(130deg);
        transition: opacity 0.2s linear, transform 0.3s ease-in-out, right 0.3s ease-in-out;

        &:hover {
            color: $clearmini-hover-color;
        }

        .qbIcon {
            cursor: pointer;
            font-size: 14px;

            @include small-breakpoint {
                font-size: 16px;
            }
        }
    }

    @include small-breakpoint {
        .clearIcon {
            display: inline;
        }
        input:focus {
            padding-right: 22px;

            & + .clearIcon {
                opacity: 1;
                right: 4px;
                transform: translateY(-50%) rotate(0deg);
            }
        }
    }
}

.formContainer {
    display: table;
    min-width: 100%;
    @include small-breakpoint {
        display: block;
    }
}

